--- a/login.html
+++ b/login.html
@@ -17,6 +17,7 @@
             <button type="submit">Submit</button>
             <p id="error-message" class="error-message"></p>
         </form>
+        <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
     </div>
     <script src="scripts.js"></script>
 </body>
