--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Introduction</title>
+    <title>Home</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to My Stylish Website</h1>
-        <button onclick="location.href='login.html'">Login</button>
+        <h1>Welcome to the Video Website</h1>
+        <a href="login.html"><button>Login</button></a>
+        <a href="signup.html"><button>Sign Up</button></a>
     </div>
 </body>
 </html>
