--- a/signup.html
+++ b/signup.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
         <h1>Sign Up</h1>
+        <!-- Sign-up form -->
         <form id="signupForm">
             <label for="newUsername">Username:</label>
             <input type="text" id="newUsername" name="newUsername" required>
