--- a/login.html
+++ b/login.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
         <h1>Login</h1>
+        <!-- Login form -->
         <form id="loginForm">
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required>
