--- a/webpage2.html
+++ b/webpage2.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Videos</title>
+    <title>Video Page</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container" id="videoContainer">
         <h1>Videos</h1>
-        <div id="videoContainer"></div>
     </div>
     <script src="scripts.js"></script>
 </body>
