--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to the Video Website</h1>
+        <h1>Welcome to the place where you have no job visiting... Go Away...</h1>
         <a href="login.html"><button>Login</button></a>
         <a href="signup.html"><button>Sign Up</button></a>
     </div>
